--- a/css/index.css
+++ b/css/index.css
@@ -423,7 +423,7 @@ header .pc_join li a:hover:after {
 
 .cont01 .swiper-button-next,
 .swiper-rtl .swiper-button-prev {
-    top: 55%;
+    top: 50%;
     right: 0;
     transform: translateY(-50%);
     width: 50px;
@@ -434,7 +434,7 @@ header .pc_join li a:hover:after {
 
 .cont01 .swiper-button-prev,
 .swiper-rtl .swiper-button-next {
-    top: 55%;
+    top: 50%;
     right: 0;
     transform: translateY(-50%);
     width: 50px;
@@ -482,6 +482,10 @@ header .pc_join li a:hover:after {
     background-color: rgb(255, 255, 228);
 }
 
+.cont02 .frame h2 {
+    margin-bottom: 0;
+}
+
 .cont02 .frame {
     width: 100%;
     height: 100%;
@@ -505,7 +509,7 @@ header .pc_join li a:hover:after {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 620px;
+    height: 720px;
     /* height: 30vw; */
 }
 
@@ -517,8 +521,8 @@ header .pc_join li a:hover:after {
     transform: scale(2.5);
 }
 
-.cont02 .swiper-slide-prev img,
-.cont02 .swiper-slide-next img,
+.cont02 .swiper-slide-prev a,
+.cont02 .swiper-slide-next a,
 .cont02 .swiper-slide-next+.swiper-slide img {
     transform: scale(0.5);
 }
@@ -812,8 +816,8 @@ header .pc_join li a:hover:after {
 
 .side_bar>div p {
     font-size: 14px;
-    color: black;
-    mix-blend-mode: difference;
+    color: white;
+    text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;
     font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
 }
 
@@ -1034,6 +1038,10 @@ footer nav .f_gnb .f_depth01 .f_depth02 {
     h2 {
         font-size: 40px;
     }
+    
+    .cont02 .frame h2 {
+        margin-bottom: 50px;
+    }
 
     /* -------------------------------------------------------------------- */
     /* cont01 */
@@ -1177,7 +1185,8 @@ footer nav .f_gnb .f_depth01 .f_depth02 {
 /* -------------------------------------------------------------------- */
 
 @media screen and (max-width:960px) {
-    h2 {
+    h2,
+    .cont02 .frame h2 {
         margin-bottom: 30px;
     }
 
@@ -1674,7 +1683,7 @@ footer nav .f_gnb .f_depth01 .f_depth02 {
 
     .cont03 .membership>a {
         display: block;
-        padding: 10px 20px;
+        padding: 10px 15px;
         border: 2px solid white;
         border-radius: 10px;
         color: white;
@@ -1685,6 +1694,7 @@ footer nav .f_gnb .f_depth01 .f_depth02 {
         transform: translateY(-50%);
         opacity: 1;
         transition: 1s;
+        z-index: 9;
     }
 
 
@@ -1851,7 +1861,8 @@ footer nav .f_gnb .f_depth01 .f_depth02 {
     /* cont03 */
 
     .cont03 .membership>a {
-        display: none;
+        padding: 5px 10px;
+        font-size: 10px;
     }
 
     .cont03 .membership .title p {
